--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         <p class="container4__item2">10000 руб.</p>
 
         <div class="container4__messages">
-            <img class="container4__img3" src="img/Vector.png">
+            <img class="container4__img3" src="img/Vector.svg">
             <p class="container4__item-int">4</p>
         </div>
         
